metager/resources/less/metager/pages/resultpage/result-page.less
/* ... */
#foki {
  display: flex;
  justify-content: left;

  #foki-box {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    max-width: @results-width-max;
    background-color: @resultpage-background-color;
    overflow-x: auto;
    padding-bottom: 8px;
    border-bottom: 1px solid @border-color;

    @media (max-width: @screen-mobile) {
      .card;
      margin: 0;
    }

    &>div {
      padding-right: 16px;

      &>a {
        color: @text-color;
      }

      &.active>a {
        border-bottom: 1px solid @text-color;
        color: @text-color;
      }

      &:last-child {
        padding-right: 20px;
      }
    }

    .edit-focus {
      margin-left: 7px;
    }

    /* Scrollbar Style */
    &::-webkit-scrollbar {
      height: 0px;
      /* remove scrollbar space */
      background: transparent;
      /* optional: just make scrollbar invisible */
    }
  }
}

#options {
  grid-area: options;
  background-color: @resultpage-background-color;
  max-width: @results-width-max;
  display: grid;
  gap: 0.5rem;

  @media (max-width: @screen-mobile) {
    .card;
    margin: 0;
  }

  input[type="checkbox"] {
    display: none;
  }

  input[type="checkbox"]:not(:checked)+.scrollbox {
    display: none;
  }

  .metager-key-hint {
    font-size: 0.8em;
    margin-bottom: 0;
  }

  .scrollbox {
    max-height: 0;
    transform-origin: top;
    transform: scaleY(0);
    transition: transform 0.5s, max-height 0.5s;
    display: grid;
    gap: 0.5rem;
  }

  input[type="checkbox"]:checked+div.scrollbox {
    max-height: 200px;
    transform: scaleY(1);
  }

  #toggle-box {
    display: flex;
    align-items: center;
    margin-left: -8px;

    >div {
      margin-left: 8px;
    }

    #filter-toggle {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content: center;
      flex-grow: 0;
      margin-left: 0px;

      >div {
        margin-left: 8px;
      }
    }

    #result-count {
      flex-grow: 1;
      text-align: right;
    }

    .option-toggle {
      text-align: center;

      label {
        font-weight: normal;
        margin-bottom: 0;
        display: flex;
        align-items: center;
      }
    }
  }

  #options-box {
    width: 100%;
    display: flex;
    justify-content: left;
    overflow: hidden;
    overflow-x: auto;
    padding-bottom: 8px;
    border-bottom: 1px solid @border-color;

    #options-items {
      display: -ms-flexbox;
      display: flex;
      align-items: center;

      .option-selector {
        display: flex;
        flex-direction: column;
        margin: 0 8px;
        justify-content: center;
        align-items: center;
        font-size: 0.9em;

        label {
          margin-bottom: 0;
          font-weight: normal;
        }

        select {
          background-color: white;
          border: 1px solid #77777780;
          padding: 3px;
          border-radius: 5px;
        }

        label[for="custom-date"] {
          cursor: pointer;

          &:hover {
            color: red;
          }
        }

        #bing-from-to {
          display: none;
        }

        #custom-date:checked+select {
          display: none;
        }

        #custom-date:checked+select+#bing-from-to {
          display: flex;
        }
      }

      .option-selector:nth-child(1) {
        margin-left: 0;
      }
    }
  }

  #settings {
    text-align: center;

    a {
      display: flex;
      align-items: center;
      color: @text-color;
      scroll-margin-top: 80px;

      &:hover {
        color: red;

        span.badge {
          background-color: red;
        }
      }

      span.badge {
        margin-top: -12px;
        font-size: 0.7em;
        font-weight: normal;
      }
    }
  }
}

#spendenaufruf {
  margin-bottom: 10px;

  a {
    background-color: white;
    display: inline-block;
    width: 100%;
  }
}

@media(max-width: @sidebar-opener-breakpoint) {
  body>.sidebar-opener:not(.close) {
    display: none;
  }
}

footer.resultPageFooter {
  max-width: @results-width-max;

  @media (max-width: (2 * @results-margin-left + @results-width-max - 1px)) {
    margin: 20px 0 0 0;
  }
}

/* Style-fixes for browsers that do not support grid layout */

#resultpage-container {
  #results-container {
    float: left;

    @media (max-width: @resultpage-breakpoint-min) {
      float: none;
    }
  }

  #additions-container {
    float: left;
    margin-left: 20px;

    @supports (display: grid) {
      float: none;
      margin-left: 0px;
    }
  }
}

/* Style for resultpage container without any header content */
.no-grid {
  margin: 0.4rem;
  grid-template-areas: "results";
  grid-template-columns: 100%;
}

#resultpage-container-noheader {
  #resultpage-container;

  .no-grid;

  @media (max-width: @resultpage-breakpoint-min) {
    .no-grid;
  }

  @media (max-width: @resultpage-breakpoint-max) {
    .no-grid;
  }
}

.metager3-unstable-warning {
  text-align: center;
  position: fixed;
  width: 100%;
  padding: 8px;

  @media (max-width: @screen-mobile) {
    padding: 5px;
  }
}

.metager3-unstable-warning-static-pages {
  .metager3-unstable-warning;
  top: 3.5rem;
  padding-right: 50px;
  background-color: inherit;

  @media (max-width: @screen-mobile) {
    padding: 5px;
    padding-right: 50px;
  }
}

.metager3-unstable-warning-resultpage {
  .metager3-unstable-warning;
  bottom: 0;
  margin-bottom: 0px;
  background-color: inherit;
}

/* Settings button and checkboxes */

.settings-checkbox {
  margin-top: 5px;
  margin-bottom: 5px;
}

.settings-checkbox .settings-icon {
  margin-left: 5px;
  font-size: 1em;
}

